# unsloth-zoo

./: .gitignore  MLX_README.md  Makefile  NOTICE  README.md  TRANSCRIPT.md  benchmark_quantized_cce.py  benchmark_unsloth_cce.py  export_gguf.py  pyproject.toml  test_forward_native_moe_loop_lora.py  test_gpt_oss_mxfp4_patch.py  test_gpt_oss_mxfp4_swizzle_walker.py  test_gpt_oss_mxfp4_use_kernels.py  test_lfm_fix.py  test_model_compatibility.py  test_qwen35_ssm_tensor_mapping.py  test_qwen_moe_lora_extractor.py  test_qwen_moe_lora_extractor_dtype.py  train_ft.py  train_lora.py  train_qlora.py
.github/: CODEOWNERS  dependabot.yml
scripts/: enforce_kwargs_spacing.py  lint_workflow_triggers.py  verify_comment_only_diff.py
temp/: main_trainer.py  sim_ddp_callbacks.py  test_pr873_sim.py
tests/: README.md  _merge_e2e_helpers.py  _pickle_base.py  conftest.py  kwargs_signature_harness.py  notebook_models.json  test_active_merge_device_matrix.py  test_add_new_tokens_padded_vocab.py  test_alloc_conf_platform_matrix.py  test_assert_same_keys_base_model.py  test_backend_device_helpers.py  test_compile_cache_security.py  test_compiler_dynamic_exec.py  test_compiler_output_capture.py  test_compiler_rewriter_exhaustive.py  test_convert_hf_to_gguf_patcher.py  test_convert_to_gguf_mtp_reconcile.py  test_convert_to_gguf_self_heal.py  test_cross_entropy_chunk_cap.py  test_deepseek_v2_moe_alias.py  test_diffusion_canvas_maxtok.py  test_diffusion_shim_thought_split.py  test_diffusion_visual_engine_env.py  test_dora_merge.py  test_encode_conversations_with_harmony.py  test_encode_conversations_with_harmony_render.py  test_extended_dep_api_pins.py  test_file_uri_resolution.py  test_finalize_huggingface_model.py  test_forward_native_moe_loop_lora.py  test_fp8_dense_merge.py  test_fused_dft_loss.py  test_fused_forward_install.py  test_gdn_extraction.py  test_gemma3_processor_batched.py  test_gemma4_audio_dtype.py  test_gemma4_banded_attention.py  test_gemma4_clippable_linear_peft_reload.py  test_gemma4_dtype_drift_guards.py  test_gemma4_flash_sliding.py  (+148 more)
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  BlockDiagonalLinear_peft_forward.py  Conv1d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  TeLinear_peft_forward.py  UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  (+3 more)
(+189 files in other folders)
